===================================
NEWS
===================================

0.8.0
-----

+ IMPORTANT USER INTERFACE CHANGES!
  - New ASE skin created by Ilija Melentijevic.
  - Now you zoom using the mouse wheel without pressing Alt key.
  - Now tools are grouped.
  - Color-bar is completely redesigned.
+ New tools: Lasso, Polygonal Lasso, Magic Wand, Eyedropper (as
  an independet tool, Alt+click is available too), Hand, Move,
  (Filled) Countour, and (Filled) Polygon.
+ Now the editor cursor displays pen preview (Ilija Melentijevic
  idea, like Animator Pro).
+ Added compression to .ase/.aseprite format.
+ Added support to zoom when you are drawing (e.g. you can use the
  wheel mouse when you are drawing a polygon or a long line).
+ Added support to resize and maximize the main window (only in
  Windows platform).

0.7.2
-----

+ Fixed	bug #2847210: "Save" button when close a modified file was
  not working.

0.7.1
-----

+ Added support to paste/copy text from/to Windows clipboard.
+ Added support to process Ctrl+C / Ctrl+V / Ctrl+P keys in all
  entry fields.
+ Fixed a bug where file names for new sprites are lower-case always
  (in Windows).
+ Fixed a program crash when try to open a file in the middle of a
  thumbnail generation process.

0.7
---

+ Added "Sprite Size" command (feature #2671468).
+ Added "Save Copy As" command (feature #2636076).
+ Copy & Paste use Windows clipboard (feature #2577954).
+ Added "Canvas Size" and "Rotate Canvas" commands.
+ Fixed compilation support for gcc 64 bits.
+ Fixed a bug with multiple editors and paste command.
+ Fixed a bug in the File Open dialog when user presses ENTER key
  with an empty file name.
+ Fixed critical bugs in rendering code.

0.6.1
-----

+ Added support to drag and drop files from Windows
  explorer (feature #2419098).
+ Fixed bug #2511762 (.PNG' extension unavailable in
  Open and Save As dialogs, thanks to Clayton Enga for
  the patch).

0.6
---

+ Added 'Curve' tool (bezier-spline).